# Beyond-Molecular-Structure-ML-for-OPV-Materials-Devices

./: .bash_aliases  .gitignore  anomaly_record.xlsx  environment.yaml  environment_opv_ml.yaml  ml_analysis_results.xlsx  opv_ml.txt  opv_results.xlsx  opv_results_v2.csv  opv_results_v2.xlsx  out_nans.csv  setup.cfg  test_nans.csv
Saeki_2022_n1318/: merged_pce_voc_jsc.csv  saeki_analysis.ipynb
_deprecated/: correlation_old.py  min_hist_gradient_boosting.py  min_vanilla.py  saeki_ml.py  sk_learn.py  solvent_properties.csv
_gary/: make_cc_env.sh  submit_training.sh
_gary/data/: jpclett.csv
_gary/ml_for_opvs/: gnn.py  graphs.py  models.py
_gary/trained_results/: graphembed_split4.pkl  min_gnn_graph_summary.csv  min_gp_bigsmiles_summary.csv  min_gp_brics.csv  min_gp_fp.csv  min_gp_fp_summary.csv  min_gp_homolumo.csv  min_gp_mordred.csv  min_gp_mordred_summary.csv  min_gp_multi_fp_summary.csv  min_gp_multi_mordred_summary.csv  min_gp_pca_mordred.csv  min_gp_selfies_summary.csv  min_ngboost_bigsmiles_summary.csv  min_ngboost_brics.csv  (+5 more)
_ml_for_opvs/: data_README.md
checkpoints/: epoch=10-step=32.ckpt
code_python/: __init__.py
gary/: README.md  batch_submit.sh  featurize.py  featurizer.py  main.py  make_cc_env.sh  optimize.py  run_graphembed_model.py  run_model.py  slurm-30564375.out  submit.sh  submit_cpu_optimize.sh  submit_gpu_optimize.sh  submit_optimize.sh  submit_run_model.sh  train.py
ml_for_opvs/: opv_results.xlsx  opv_results_v2 - Copy.csv  opv_results_v2.csv  training_README.md
results/: ecfp_all_rad_test.txt  ecfp_rad_test.txt
(+5738 files in other folders)
