[metadata]
name = ml_for_opvs
version = 0.0.1
description = "OPV ML Project adapted from Wu et al."
long_description = file: README.md
author = "Stanley Lo", "Martin Seifrid", "Linh Le"
author_email = ""
url= ""
# Did we have any license in mind?
license = MIT
keywords =  OPV, Machine Learning, Deep Learning
classifiers =
    Programming Language :: Python :: 3.9


[options]
packages = find:
include_package_data = True
install_requires = 
  rich >= 10.1.0
  wandb >= 0.11.0
  torch >= 1.9.0
  pytorch_lightning
  matplotlib
  pandas
  scikit-learn
  pillow
  numpy
  xgboost
  selfies
  rdkit-pypi
  yaspin
  ipython
  scikit-optimize
  seaborn

[options.packages.find]
exclude = 
  tests
  docs

